API base resource prototype

--- a/static/web/src/assets/css/styles.css
+++ b/static/web/src/assets/css/styles.css
@@ -1,4 +1,8 @@
 body {
-    background: #F0F0F0;
-    color: black;
+  background: white;
+  color: black;
+}
+
+attlas-platform {
+  color:green;
 }
