home/login routers

--- a/static/web/src/app/app.component.html
+++ b/static/web/src/app/app.component.html
@@ -1,4 +1,1 @@
-<main>
-  <h1>@tlas platform</h1>
-  <img style="height:92px; float:bottom;" src="../assets/images/logo.png">
-</main>
+<router-outlet></router-outlet>
