--- a/static/web/src/app/home/home.component.html
+++ b/static/web/src/app/home/home.component.html
@@ -1,41 +1,100 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#"><span style="color:#00c7d3">Sky</span>worker</a>
-  <!--a class="navbar-brand" href="#">
-    <img src="https://skyworker.com.ua/wp-content/uploads/2017/03/skyworker_logo_small.png" height="16px">
-  </a-->
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+<app-navbar></app-navbar>
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-    </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Search</button>
-    </form>
+<div class="progress" style="height:2px">
+  <div class="progress-bar bg-info" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+</div>
+
+
+<ng-template #content let-c="close" let-d="dismiss">
+  <div class="modal-header">
+    <h4 class="modal-title">Modal title</h4>
+    <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
   </div>
-</nav>
+  <div class="modal-body">
+    <p>One fine body&hellip;</p>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-outline-dark" (click)="c('Close click')">Close</button>
+  </div>
+</ng-template>
+
+<button class="btn btn-lg btn-outline-primary" (click)="open(content)">Launch demo modal</button>
+<pre>{{closeResult}}</pre>
+
+<ngb-tabset>
+  <ngb-tab title="Simple">
+    <ng-template ngbTabContent>
+      <p>Raw denim you probably haven't heard of them jean shorts Austin. Nesciunt tofu stumptown aliqua, retro synth
+      master cleanse. Mustache cliche tempor, williamsburg carles vegan helvetica. Reprehenderit butcher retro keffiyeh
+      dreamcatcher synth. Cosby sweater eu banh mi, qui irure terry richardson ex squid. Aliquip placeat salvia cillum
+      iphone. Seitan aliquip quis cardigan american apparel, butcher voluptate nisi qui.</p>
+    </ng-template>
+  </ngb-tab>
+  <ngb-tab>
+    <ng-template ngbTabTitle><b>Fancy</b> title</ng-template>
+    <ng-template ngbTabContent>Food truck fixie locavore, accusamus mcsweeney's marfa nulla single-origin coffee squid.
+      <p>Exercitation +1 labore velit, blog sartorial PBR leggings next level wes anderson artisan four loko farm-to-table
+      craft beer twee. Qui photo booth letterpress, commodo enim craft beer mlkshk aliquip jean shorts ullamco ad vinyl
+      cillum PBR. Homo nostrud organic, assumenda labore aesthetic magna delectus mollit. Keytar helvetica VHS salvia
+      yr, vero magna velit sapiente labore stumptown. Vegan fanny pack odio cillum wes anderson 8-bit, sustainable jean
+      shorts beard ut DIY ethical culpa terry richardson biodiesel. Art party scenester stumptown, tumblr butcher vero
+      sint qui sapiente accusamus tattooed echo park.</p>
+    </ng-template>
+  </ngb-tab>
+  <ngb-tab title="Disabled" [disabled]="true">
+    <ng-template ngbTabContent>
+      <p>Sed commodo, leo at suscipit dictum, quam est porttitor sapien, eget sodales nibh elit id diam. Nulla facilisi. Donec egestas ligula vitae odio interdum aliquet. Duis lectus turpis, luctus eget tincidunt eu, congue et odio. Duis pharetra et nisl at faucibus. Quisque luctus pulvinar arcu, et molestie lectus ultrices et. Sed diam urna, egestas ut ipsum vel, volutpat volutpat neque. Praesent fringilla tortor arcu. Vivamus faucibus nisl enim, nec tristique ipsum euismod facilisis. Morbi ut bibendum est, eu tincidunt odio. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Mauris aliquet odio ac lorem aliquet ultricies in eget neque. Phasellus nec tortor vel tellus pulvinar feugiat.</p>
+    </ng-template>
+  </ngb-tab>
+</ngb-tabset>
+
+
+
 <form name="form" (ngSubmit)="f.form.valid && match()" #f="ngForm" novalidate>
   <div class="container-fluid" style="padding-top:16px">
+
     <div class="row">
       <div class="col-sm-6">
-        <div class="form-group">
-          <label for="comment">Interviewer</label>
-          <textarea class="form-control" rows="10" id="interviewer" name="interviewer" [(ngModel)]="model.interviewer" #interviewer="ngModel" required></textarea>
+        <nav>
+          <div class="nav nav-tabs" id="nav-tab" role="tablist">
+            <a class="nav-item nav-link active" id="nav-home-tab" data-toggle="tab" href="#nav-home" role="tab" aria-controls="nav-home" aria-selected="true">Manual</a>
+            <a class="nav-item nav-link" id="nav-profile-tab" data-toggle="tab" href="#nav-profile" role="tab" aria-controls="nav-profile" aria-selected="false"> <img style="height:24px" src="https://cleverstaff.net/external/img/svg/logo-choozen.svg"></a>
+          </div>
+        </nav>
+        <div class="tab-content" id="nav-tabContent">
+          <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
+            <div class="form-group input-offset">
+              <textarea class="form-control" rows="10" id="interviewer" name="interviewer" [(ngModel)]="model.interviewer" #interviewer="ngModel" required></textarea>
+            </div>
+            <span *ngFor="let tag of interviewerTags">
+              <span class="badge badge-pill" [ngClass]="{'badge-success': intersectionTags.indexOf(tag) > -1, 'badge-light': intersectionTags.indexOf(tag) <= -1 }">{{tag}}</span>
+            </span>
+          </div>
+          <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">
+            <ul class="list-group">
+              <li *ngFor="let vacancy of cleverstaffVacancies" class="list-group-item">{{vacancy.title}}</li>
+            </ul>
+          </div>
         </div>
-        <span *ngFor="let tag of interviewerTags">
-          <span class="badge badge-pill" [ngClass]="{'badge-success': intersectionTags.indexOf(tag) > -1, 'badge-light': intersectionTags.indexOf(tag) <= -1 }">{{tag}}</span>
-        </span>
       </div>
       <div class="col-sm-6">
-        <div class="form-group">
-          <label for="comment">Interviewee</label>
-          <textarea class="form-control" rows="10"  id="interviewee" name="interviewee" [(ngModel)]="model.interviewee" #interviewer="ngModel" required></textarea>
+        <nav>
+          <div class="nav nav-tabs" id="nav-tab" role="tablist">
+            <a class="nav-item nav-link active" id="nav-home-tab" data-toggle="tab" href="#nav-home" role="tab" aria-controls="nav-home" aria-selected="true">Manual</a>
+          </div>
+        </nav>
+        <div class="tab-content" id="nav-tabContent">
+          <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
+            <div class="form-group input-offset">
+              <textarea class="form-control" rows="10"  id="interviewee" name="interviewee" [(ngModel)]="model.interviewee" #interviewer="ngModel" required></textarea>
+            </div>
+            <span *ngFor="let tag of intervieweeTags">
+              <span class="badge badge-pill" [ngClass]="{'badge-success': intersectionTags.indexOf(tag) > -1, 'badge-light': intersectionTags.indexOf(tag) <= -1 }">{{tag}}</span>
+            </span>
+          </div>
         </div>
-        <span *ngFor="let tag of intervieweeTags">
-          <span class="badge badge-pill" [ngClass]="{'badge-success': intersectionTags.indexOf(tag) > -1, 'badge-light': intersectionTags.indexOf(tag) <= -1 }">{{tag}}</span>
-        </span>
       </div>
     </div>
 
