base routing component

--- a/static/client/src/app/app.component.html
+++ b/static/client/src/app/app.component.html
@@ -1,3 +1,5 @@
+<a routerLink="/login">Heroes</a>
+<router-outlet></router-outlet>
 <!--The content below is only a placeholder and can be replaced.-->
 <div class="container client-offset">
   <div class="jumbotron">
