Static/Client/LoggingService

--- a/static/client/src/app/ctrls/msgbar/msgbar.component.html
+++ b/static/client/src/app/ctrls/msgbar/msgbar.component.html
@@ -1,5 +1,5 @@
-<div *ngIf="message" class="p-2 mb-2 bg-danger text-white text-center">
-  {{message}}
+<div *ngIf="notification.message" class="p-2 mb-2 bg-danger text-white text-center">
+  {{notification.message}}
   <!--button type="button" class="close text-white" data-dismiss="alert" aria-label="Close">
     <span aria-hidden="true">&times;</span>
   </button-->
