auth service 6 providers to support

--- a/static/client/src/app/bind/bind.component.html
+++ b/static/client/src/app/bind/bind.component.html
@@ -6,6 +6,9 @@
           <img style="height:80px" src="assets/images/logo.png">
         </div>
       </a>
+      <button (click)="login()">login</button>
+      <button (click)="verify()">verify</button>
+      <div>{{userID}}</div>
       <hr/>
       <div class="container">
         <div class="row">
