js fb-sdk was removed

--- a/static/client/src/app/bind/bind.component.html
+++ b/static/client/src/app/bind/bind.component.html
@@ -2,13 +2,10 @@
   <div class="row" style="height:100vh">
     <div class="border offset-1 col-10 offset-sm-2 col-sm-8 offset-md-3 col-md-6 offset-lg-4 col-lg-4 bg-light">
       <a routerLink="/home">
-        <div class="text-center" style="height: 18vh;padding-top: 5vh">
-          <img style="height:80px" src="assets/images/logo.png">
+        <div class="text-center logo-cell">
+          <img class="logo-img" src="assets/images/logo.png">
         </div>
       </a>
-      <button (click)="login()">login</button>
-      <button (click)="verify()">verify</button>
-      <div>{{userID}}</div>
       <hr/>
       <div class="container">
         <div class="row">
