--- a/static/client/src/app/bind/bind.component.html
+++ b/static/client/src/app/bind/bind.component.html
@@ -2,14 +2,16 @@
   <div class="row" style="height:100vh">
     <div class="border offset-1 col-10 offset-sm-2 col-sm-8 offset-md-3 col-md-6 offset-lg-4 col-lg-4 bg-light">
       <a routerLink="/home">
-        <div class="text-center logo-cell">
-          <img class="logo-img" src="assets/images/logo.png">
+        <div class="text-center">
+          <img class="logo-img pt-3" src="assets/images/logo.png">
         </div>
       </a>
       <hr/>
+      <app-loading-panel></app-loading-panel>
+      <app-error-panel></app-error-panel>
       <div class="container">
         <div class="row">
-          <div class="col-3 provider-cell text-center"  *ngFor="let provider of providers; let i = index">
+          <div class="col-3 text-center p-0"  *ngFor="let provider of providers; let i = index">
             <img *ngIf="i<providersToShow || expanded" class="provider-icon" [attr.src]="'assets/images/providers/' + provider + '.png'">
           </div>
         </div>
@@ -18,11 +20,6 @@
             <button type="button" class="btn btn-link" (click)="showMoreLess()">{{expanded?'less...':'more...'}}</button>
           </div>
         </div>
-      </div>
-      <hr/>
-      <div class="form-check">
-        <input type="checkbox" class="form-check-input" id="exampleCheck1" checked>
-        <label class="form-check-label" for="exampleCheck1">Remember me</label>
       </div>
     </div>
   </div>
