--- a/static/client/src/app/bind/bind.component.html
+++ b/static/client/src/app/bind/bind.component.html
@@ -3,20 +3,24 @@
     <div class="border offset-1 col-10 offset-sm-2 col-sm-8 offset-md-3 col-md-6 offset-lg-4 col-lg-4 bg-light">
       <a routerLink="/home">
         <div class="text-center">
-          <img class="logo-img pt-3" src="assets/images/logo.png">
+          <img class="logo-img pt-4 pb-4" src="assets/images/logo.png">
         </div>
       </a>
-      <hr/>
-      <app-loading-panel></app-loading-panel>
-      <app-error-panel></app-error-panel>
-      <div class="container">
+      <div class="container pt-4 border-top">
         <div class="row">
-          <div class="col-3 text-center p-0"  *ngFor="let provider of providers; let i = index">
-            <img *ngIf="i<providersToShow || expanded" class="provider-icon" [attr.src]="'assets/images/providers/' + provider + '.png'">
+          <div class="col-12 text-center">
+            <app-loading-panel *ngIf="loading"></app-loading-panel>
+            <app-error-panel *ngIf="error" [error]="error"></app-error-panel>
           </div>
         </div>
-        <div class="row">
-          <div class="col-12 text-right">
+        <div class="row" *ngIf="!(loading || error)">
+          <div class="col-3 text-center p-0"  *ngFor="let provider of providers; let i = index">
+            <a [attr.href]="'http://localhost:8080/api/v1/auth/' + provider.providerId + '?callback=http://localhost:4200/bind'" *ngIf="i<providersToShow || expanded">
+              <img  class="provider-icon" [attr.src]="'assets/images/providers/' + provider.providerId + '.png'">
+              <div *ngIf="provider.connected" class="bg-info border border-light circle"></div>
+            </a>
+          </div>
+          <div class="col-12 text-right" *ngIf="providers.length">
             <button type="button" class="btn btn-link" (click)="showMoreLess()">{{expanded?'less...':'more...'}}</button>
           </div>
         </div>
