--- a/static/client/src/app/ctrls/error-panel/error-panel.component.html
+++ b/static/client/src/app/ctrls/error-panel/error-panel.component.html
@@ -1,5 +1,8 @@
 <div class="container-fluid">
   <div class="row text-center">
+    <div class="col-12 text-danger">
+      {{errorMessage}}
+    </div>
     <div class="col-12 p-4">
       <img class="img-fluid error-icon"  src="assets/images/error.gif">
     </div>
