--- a/static/client/src/app/home/home.component.html
+++ b/static/client/src/app/home/home.component.html
@@ -1,6 +1,4 @@
 <app-navbar></app-navbar>
 <app-progress-bar></app-progress-bar>
+<app-nav-panel [options]="navButtons"></app-nav-panel>
 <!--button (click)="loggingService.error('error')">Error</button-->
-<p class="fixed-bottom text-center bg-light border border-light" style="padding:16px 0px 16px 0px; margin:0px">
-  <a routerLink="/bind">Bind</a>
-</p>
