ngx-charts + Jenkinsfile

--- a/static/client/src/app/ctrls/navbar/navbar.component.html
+++ b/static/client/src/app/ctrls/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#"><span style="color:#00c7d3">@</span>tlas</a>
+  <a class="navbar-brand" href="#"><span style="color:#00c7d3">sky</span>worker</a>
   <!--a class="navbar-brand" href="#">
     <img src="https://skyworker.com.ua/wp-content/uploads/2017/03/skyworker_logo_small.png" height="16px">
   </a-->
