--- a/static/client/src/app/home/home.component.html
+++ b/static/client/src/app/home/home.component.html
@@ -1,4 +1,30 @@
 <app-navbar></app-navbar>
 <app-progress-bar></app-progress-bar>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-12 m-0 p-0 border">
+      <div class="p-2">Liquidity</div>
+      <ngx-charts-line-chart
+        [scheme]="colorScheme"
+        [results]="single"
+        [gradient]="gradient"
+        [xAxis]="showXAxis"
+        [yAxis]="showYAxis"
+        [legend]="showLegend"
+        [showXAxisLabel]="showXAxisLabel"
+        [showYAxisLabel]="showYAxisLabel"
+        [xAxisLabel]="xAxisLabel"
+        [yAxisLabel]="yAxisLabel"
+        [autoScale]="autoScale"
+        (select)="onSelect($event)">
+      </ngx-charts-line-chart>
+    </div>
+  </div>
+</div>
+      
 <app-nav-panel [options]="navButtons"></app-nav-panel>
 <!--button (click)="loggingService.error('error')">Error</button-->
+<!--
+        [view]="view"
+
+-->
