--- a/static/client/src/app/home/home.component.html
+++ b/static/client/src/app/home/home.component.html
@@ -1,30 +1,17 @@
-<app-navbar></app-navbar>
-<app-progress-bar></app-progress-bar>
-<div class="container-fluid">
-  <div class="row">
-    <div class="col-12 m-0 p-0 border">
-      <div class="p-2">Liquidity</div>
-      <ngx-charts-line-chart
-        [scheme]="colorScheme"
-        [results]="single"
-        [gradient]="gradient"
-        [xAxis]="showXAxis"
-        [yAxis]="showYAxis"
-        [legend]="showLegend"
-        [showXAxisLabel]="showXAxisLabel"
-        [showYAxisLabel]="showYAxisLabel"
-        [xAxisLabel]="xAxisLabel"
-        [yAxisLabel]="yAxisLabel"
-        [autoScale]="autoScale"
-        (select)="onSelect($event)">
-      </ngx-charts-line-chart>
+<div class="home-bg bg-light p-3">
+  <div class="container">
+    <div class="row">
+      <div class="col-12 offset-sm-2 col-sm-8">
+        <div class="jumbotron bg-light">
+          <h1 class="display-4">Hello, world!</h1>
+          <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+          <hr class="my-4">
+          <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+          <p class="lead text-center fixed-bottom">
+            <a class="btn btn-primary btn-lg" routerLink='/feed' role="button">Join our community</a>
+          </p>
+        </div>
+      </div>
     </div>
   </div>
 </div>
-      
-<app-nav-panel [options]="navButtons"></app-nav-panel>
-<!--button (click)="loggingService.error('error')">Error</button-->
-<!--
-        [view]="view"
-
--->
