--- a/static/client/src/app/home/home.component.html
+++ b/static/client/src/app/home/home.component.html
@@ -4,9 +4,14 @@
       <div class="col-12 offset-sm-2 col-sm-8">
         <div class="jumbotron bg-light">
           <h1 class="display-4">Hi, there!</h1>
-          <p class="lead">With our service you can speed up your career by finding a patron, review only best opportunities on the market using auto-matching CV/Vacancy tool and monetize your social graph with referral grid.</p>
+          <p class="lead">With our service you can</p>
+            <ul>
+              <li>speed up your career by finding a patron</li>
+              <li>review only best opportunities on the market using auto-matching CV/Vacancy tool</li>
+              <li>monetize your social graph with referral global grid</li>
+            </ul>
           <hr class="my-4">
-          <p class="font-italic">I run my business on my phone<br/>Matt Hunter | Salesforce.com CEO</p>
+          <p class="font-italic text-right"><span class="font-weight-bold">I run my business on my phone</span><br/>Matt Hunter | Salesforce.com CEO</p>
           <p class="lead text-center fixed-bottom">
             <a class="btn btn-primary btn-lg" routerLink='/feed' role="button">Join our community</a>
           </p>
