static.client fixed lint

--- a/static/client/src/app/feed/feed.component.html
+++ b/static/client/src/app/feed/feed.component.html
@@ -2,6 +2,7 @@
 <app-progress-bar></app-progress-bar>
 <!--app-nav-panel [options]="navButtons"></app-nav-panel-->
 <div class="container">
+  <a routerLink="/bind">bind</a>
   <div class="row">
     <div class="col-12 col-sm-6">
       <app-liquidity></app-liquidity>
