--- a/static/client/src/app/home/home.component.html
+++ b/static/client/src/app/home/home.component.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-12 offset-sm-2 col-sm-8">
         <div class="jumbotron bg-light">
-          <h2 class="display-4">Hi, <small>$&#123;USER&#125;</small></h2>
+          <h2>Hi, <small>$&#123;USER&#125;</small></h2>
           <p class="lead">using our service, you will be able to</p>
             <ul>
               <li>speed up your career by finding a patron</li>
