--- a/static/client/src/app/bind/bind.component.html
+++ b/static/client/src/app/bind/bind.component.html
@@ -3,7 +3,7 @@
     <div class="offset-1 col-10 offset-sm-2 col-sm-8 offset-md-3 col-md-6 offset-lg-4 col-lg-4 bg-light border">
       <a routerLink="/home">
         <div class="text-center">
-          <img class="logo-img pt-4 pb-4" src="assets/images/logo.png">
+          <img class="img-fluid community-logo pt-4 pb-4" src="assets/images/community.png">
         </div>
       </a>
       <div class="container pt-4 border-top">
