--- a/static/client/src/app/feed/feed.component.html
+++ b/static/client/src/app/feed/feed.component.html
@@ -2,8 +2,12 @@
 <app-progress-bar></app-progress-bar>
 <!--app-nav-panel [options]="navButtons"></app-nav-panel-->
 <div class="container">
-  <a routerLink="/bind">bind</a>
   <div class="row">
+    <div class="col-12 col-sm-6">
+      <a routerLink="/bind">
+        <img class="img-fluid float-right pt-2" src="assets/images/icons/bind.png" width="32">
+      </a>
+    </div>
     <div class="col-12 col-sm-6">
       <app-liquidity></app-liquidity>
     </div>
