--- a/static/client/src/app/ctrls/navbar/navbar.component.html
+++ b/static/client/src/app/ctrls/navbar/navbar.component.html
@@ -1,18 +1,19 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" routerLink="/home"><span style="color:#00c7d3">sky</span>worker</a>
-  <!--a class="navbar-brand" href="#">
-    <img src="https://skyworker.com.ua/wp-content/uploads/2017/03/skyworker_logo_small.png" height="16px">
-  </a-->
+  <a routerLink="/home">
+    <img class="navbar-logo" src="assets/images/logo.png">
+  </a>
+  <a class="nav-link text-body py-0" routerLink="/tenant"><span style="color:#00c7d3">sky</span>worker</a>
+  <a class="nav-link py-0 px-1" routerLink="/notifications"><img class="navbar-icon" src="assets/images/icons/bell.png"></a>
+  <a class="nav-link py-0 px-1" routerLink="/bind"><img class="navbar-icon" src="assets/images/icons/bind.png"></a>
   <button (click)="toggleCollapse()" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-
   <div class="collapse navbar-collapse" id="navbarSupportedContent" [class.show]="show">
     <ul class="navbar-nav mr-auto">
     </ul>
     <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Search</button>
+      <input class="form-control mr-sm-2 rounded-0" type="search" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-info my-2 my-sm-0 rounded-0" type="submit">Search</button>
     </form>
   </div>
 </nav>
