--- a/static/client/src/app/ctrls/msgbar/msgbar.component.html
+++ b/static/client/src/app/ctrls/msgbar/msgbar.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="show && notification.message" class="p-2 mb-2 bg-danger text-white text-center fixed-top">
+<div *ngIf="show && notification.message" class="p-2 mb-2 bg-danger text-white text-center fixed-top1">
   {{notification.message}}
   <button type="button" (click)="show = !show" class="close text-white" data-dismiss="alert" aria-label="Close">
     <span aria-hidden="true">&times;</span>
