--- a/static/client/src/app/feed/feed.component.html
+++ b/static/client/src/app/feed/feed.component.html
@@ -1,5 +1,6 @@
 <app-navbar></app-navbar>
 <app-progress-bar></app-progress-bar>
+<app-msgbar></app-msgbar>
 <!--app-nav-panel [options]="navButtons"></app-nav-panel-->
 <div class="container">
   <div class="row">
