--- a/static/client/src/app/home/home.component.html
+++ b/static/client/src/app/home/home.component.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-12 offset-sm-2 col-sm-8">
         <div class="jumbotron bg-light">
-          <h2>Hi, <small>$&#123;USER&#125;!</small></h2>
+          <h2>Hi, there!</h2>
           <p class="lead">using our service, you will be able to</p>
             <ul>
               <li>speed up your career by finding a patron</li>
@@ -13,7 +13,7 @@
           <hr class="my-4">
           <p class="font-italic text-right"><span class="font-weight-bold">I run my business on my phone</span><br/>Matt Hunter | Salesforce.com CEO</p>
           <p class="lead text-center fixed-bottom">
-            <a class="btn btn-primary btn-lg rounded-1" routerLink='/feed' role="button">Join our community</a>
+            <a class="btn btn-primary btn-lg rounded-0" routerLink='/feed' role="button">Join our community</a>
           </p>
         </div>
       </div>
