--- a/static/client/src/app/apps/patron/patron.component.html
+++ b/static/client/src/app/apps/patron/patron.component.html
@@ -8,7 +8,7 @@
     </button>
   </div>
   <ul *ngIf="!isCollapsed()" class="list-group list-group-flush">
-    <li class="list-group-item"><button type="button" class="btn btn-block btn-primary" disabled>Find a Patron</button></li>
-    <li class="list-group-item"><button type="button" class="btn btn-block btn-primary" disabled>Become a Patron</button></li>
+    <li class="list-group-item"><button type="button" class="btn btn-block btn-primary rounded-0" disabled>Find a Patron</button></li>
+    <li class="list-group-item"><button type="button" class="btn btn-block btn-primary rounded-0" disabled>Become a Patron</button></li>
   </ul>
 </div>
