--- a/static/client/src/app/bind/bind.component.html
+++ b/static/client/src/app/bind/bind.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row" style="height:100vh">
-    <div class="offset-1 col-10 offset-sm-2 col-sm-8 offset-md-3 col-md-6 offset-lg-4 col-lg-4 bg-light border">
+    <div class="offset-1 col-10 offset-sm-2 col-sm-8 offset-md-3 col-md-6 offset-lg-4 col-lg-4 bg-light border p-0">
       <a routerLink="/home">
         <div class="text-center">
           <img class="img-fluid community-logo pt-4 pb-4" src="assets/images/community.png">
@@ -27,7 +27,16 @@
           </div>
         </div>
       </div>
-      <app-nav-panel [options]="navButtons" *ngIf="isAuthenticated()"></app-nav-panel>
+      <div class="container border-top sticked-container-bottom" *ngIf="isAuthenticated()">
+        <div class="row">
+          <div class="col-6 p-0 text-center border-right">
+            <button type="button" class="btn btn-block btn-link rounded-0"><img class="button-icon" src="assets/images/icons/home.png" (click)="gotoHome()"></button>
+          </div>
+          <div class="col-6 p-0 text-center">
+            <button type="button" class="btn btn-block btn-link rounded-0"><img class="button-icon" src="assets/images/icons/profile.png" (click)="gotoProfile()"></button>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </div>
